feat: kill child application idea and unify logic